--- a/opencv_aruco/src/CMakeLists.txt
+++ b/opencv_aruco/src/CMakeLists.txt
@@ -33,17 +33,23 @@ add_library(realscene_cam_opt SHARED ${LIBSRC} ${realsense2_LIBS})
 #ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})
 ADD_EXECUTABLE(createMarker createMarker.cpp)
 ADD_EXECUTABLE(Intrintic realsenceIntrintics.cpp)
+ADD_EXECUTABLE(detectMarker detectMarker.cpp)
+ADD_EXECUTABLE(PoseMarker PoseMarker.cpp)
+
 
 #添加链接库
 TARGET_LINK_LIBRARIES(createMarker ${OpenCV_LIBS})
 TARGET_LINK_LIBRARIES(Intrintic ${OpenCV_LIBS} realscene_cam_opt ${REALSENSE2_FOUND})
+TARGET_LINK_LIBRARIES(detectMarker ${OpenCV_LIBS} realscene_cam_opt ${REALSENSE2_FOUND})
+TARGET_LINK_LIBRARIES(PoseMarker ${OpenCV_LIBS} realscene_cam_opt ${REALSENSE2_FOUND})
 
-
-# 安装到安装路径
 INSTALL(FILES  ${INCLUDESRC}/realscene_cam_opt.hpp DESTINATION ${CMAKE_INSTALL_PREFIX}/include )                   
 INSTALL(TARGETS realscene_cam_opt LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 INSTALL(TARGETS createMarker 
         RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 INSTALL(TARGETS Intrintic  
         RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
-        
+INSTALL(TARGETS detectMarker  
+        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+INSTALL(TARGETS PoseMarker
+        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
